--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,12 @@ dependencies:
     sdk: flutter
   google_sign_in: ^4.5.5
   googleapis: ^0.56.1
+  file_picker: ^2.0.8+1
+  path_provider: ^1.6.21
+  googleapis_auth: ^0.2.12
+  flutter_secure_storage: ^3.3.5
+  firebase_auth: ^0.18.1+2
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
