--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   googleapis_auth: ^0.2.12
   flutter_secure_storage: ^3.3.5
   firebase_auth: ^0.18.1+2
+  photo_manager: ^0.5.7
+
 
 
   # The following adds the Cupertino Icons font to your application.
